--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Head with Title of Horiseon Marketing Demo -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Marketing Demo</title>
 </head>
 
+<!-- Body -->
 <body>
+
+<!-- Header with nav pane -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -19,44 +23,48 @@
         </nav>
     </header>
 
-    <section class="hero"></section>
+<!-- Hero Image -->
+    <figure alt="background image of four people meeting in a conference room and reviewing documents"></figure>
 
-    <section class="content">
+<!-- Main content section to display three distinct content sections at 70% width -->
+    <main>
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg"  alt="stock image of SEO writen in a word cloud on a notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="stock image of a laptop screen displaying a graph with reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="stock image of social media marketing stickers" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </article>
-    </section>
+    </main>
 
-    <section class="benefits">
-        <article class="benefit-lead">
+<!-- Aside content section to display Benefits panel to the right of the main content -->
+    <aside>
+        <article class="benefits">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="stock image icon of a path to generating income to represent the idea of lead generation"/>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </article>
-        <article class="benefit-brand">
+        <article class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="stock image icon of a lightbulb with radar symbols to represent the idea of brand awareness"/>
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </article>
-        <article class="benefit-cost">
+        <article class="benefits">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="stock image icon of gears and dollar signs to represent the idea of cost Management"/>
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </article>
-    </section>
+    </aside>
 
+<!-- Footer with copyright -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
